--- a/PhysicsBlock/PhysicsBlock.csproj
+++ b/PhysicsBlock/PhysicsBlock.csproj
@@ -42,11 +42,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Commands\Command.cs" />
+    <Compile Include="Commands\CommandFactory.cs" />
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Graphics\Animation.cs" />
     <Compile Include="Graphics\Image.cs" />
+    <Compile Include="Input\InputController.cs" />
+    <Compile Include="Input\InputControllers\KeyboardController.cs" />
+    <Compile Include="Input\InputManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -65,7 +69,6 @@
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Input\" />
     <Folder Include="Physics\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
