--- a/PhysicsBlock/PhysicsBlock.csproj
+++ b/PhysicsBlock/PhysicsBlock.csproj
@@ -41,6 +41,9 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Collisions\Collision.cs" />
+    <Compile Include="Collisions\CollisionDetector.cs" />
+    <Compile Include="Collisions\CollisionResolver.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CommandFactory.cs" />
     <Compile Include="Commands\CommandManager.cs" />
@@ -51,6 +54,14 @@
     <Compile Include="Input\InputController.cs" />
     <Compile Include="Input\InputControllers\KeyboardController.cs" />
     <Compile Include="Input\InputManager.cs" />
+    <Compile Include="Physics\Body.cs" />
+    <Compile Include="Physics\Box.cs" />
+    <Compile Include="Physics\Circle.cs" />
+    <Compile Include="Physics\Fixture.cs" />
+    <Compile Include="Physics\MultiShapeFixture.cs" />
+    <Compile Include="Physics\OrientedBox.cs" />
+    <Compile Include="Physics\Shape.cs" />
+    <Compile Include="Physics\SingleShapeFixture.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -68,9 +79,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Physics\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
