--- a/PhysicsBlock/PhysicsBlock.csproj
+++ b/PhysicsBlock/PhysicsBlock.csproj
@@ -48,9 +48,16 @@
     <Compile Include="Commands\CommandFactory.cs" />
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Configuration.cs" />
+    <Compile Include="FileTemplates\Class.cs" />
+    <Compile Include="FileTemplates\Event_Args.cs" />
+    <Compile Include="FileTemplates\StaticClass.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Graphics\Animation.cs" />
     <Compile Include="Graphics\Image.cs" />
+    <Compile Include="Input\EventArgs\KeyPressArgs.cs" />
+    <Compile Include="Input\EventArgs\MouseMoveArgs.cs" />
+    <Compile Include="Input\Enumerations.cs" />
+    <Compile Include="Input\EventArgs\MouseClickArgs.cs" />
     <Compile Include="Input\InputController.cs" />
     <Compile Include="Input\InputControllers\KeyboardController.cs" />
     <Compile Include="Input\InputManager.cs" />
@@ -79,7 +86,9 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Input\Exceptions\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
