Updated input system

--- a/PhysicsBlock/PhysicsBlock.csproj
+++ b/PhysicsBlock/PhysicsBlock.csproj
@@ -48,19 +48,17 @@
     <Compile Include="Commands\CommandFactory.cs" />
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="FileTemplates\Class.cs" />
-    <Compile Include="FileTemplates\Event_Args.cs" />
-    <Compile Include="FileTemplates\StaticClass.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Graphics\Animation.cs" />
     <Compile Include="Graphics\Image.cs" />
-    <Compile Include="Input\EventArgs\KeyPressArgs.cs" />
+    <Compile Include="Input\EventArgs\KeyStatesArgs.cs" />
     <Compile Include="Input\EventArgs\MouseMoveArgs.cs" />
     <Compile Include="Input\Enumerations.cs" />
     <Compile Include="Input\EventArgs\MouseClickArgs.cs" />
     <Compile Include="Input\InputController.cs" />
     <Compile Include="Input\InputControllers\KeyboardController.cs" />
     <Compile Include="Input\InputManager.cs" />
+    <Compile Include="Logs\LogManager.cs" />
     <Compile Include="Physics\Body.cs" />
     <Compile Include="Physics\Box.cs" />
     <Compile Include="Physics\Circle.cs" />
